# HEXBINCHAR_FILE_EDITOR_Stephany-Mausse_10254688

./: .clangd  CMakeLists.txt  README.md
.cache/clangd/index/: application.cpp.E38650948F69943A.idx  application.hpp.A48DF363CF112AF6.idx  command_handler.cpp.3E38A42EE44C06FE.idx  display_view.cpp.D2150EC06B557117.idx  display_view.hpp.9C685DC1479BF70E.idx  editor.cpp.BB1BB94C18D14165.idx  editor.hpp.C2DF8E2466A87127.idx  file_buffer.cpp.4BE0E356D479D915.idx  file_manager.cpp.FE738C87A371EFD4.idx  file_manager.hpp.9AA800368D73BAA3.idx  main.cpp.B8E6A944ED0B3E5F.idx  search.cpp.4B6AE0D86540817A.idx  search.hpp.8C8C1296A65B47AD.idx  test_main.cpp.551F07C659E518C5.idx  undo_history.cpp.E10E220B24250E44.idx
docs/: conception.md  phase1_conceptualisation.md  phase2_development.md  phase3_finalisation.md
src/: application.cpp  application.hpp  command_handler.cpp  command_handler.hpp  display_view.cpp  display_view.hpp  editor.cpp  editor.hpp  file_buffer.cpp  file_buffer.hpp  file_manager.cpp  file_manager.hpp  main.cpp  search.cpp  search.hpp  undo_history.cpp  undo_history.hpp
tests/: test_main.cpp
